--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.VirtualStore">
         <activity
+            android:name=".SetupProfile"
+            android:exported="false" />
+        <activity
+            android:name=".Register"
+            android:exported="false" />
+        <activity
+            android:name=".RegisterName"
+            android:exported="false" />
+        <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
             android:name=".Home"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".wellcome"
             android:exported="true">
@@ -22,15 +32,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
